<resources>
    <string name="app_name">Elementary CRM</string>
    <string name="action_settings">Settings</string>
    <string name="delete">delete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_client">ClientActivity</string>
    <string name="title_activity_client_list">Client List</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="call">call</string>
    <string name="reminders">Reminders</string>
    <string name="notes">Notes</string>
    <string name="note">Note</string>
    <string name="reminder">Reminder</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="create_time">create time</string>
    <string name="client">Client</string>
    <string name="change">Change</string>
    <string name="when">When</string>
    <string name="edit">Edit</string>
</resources>
