<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.axelby.elementarycrm.ReminderDelayerActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/client_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/client"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/phone"
            app:layout_constraintBottom_toBottomOf="@+id/client_label"
            app:layout_constraintTop_toTopOf="@+id/client_label"
            tools:text="Dan Goldstein" />

        <ImageButton
            android:id="@+id/call_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="?android:colorBackground"
            android:tint="@color/colorPrimary"
            android:contentDescription="@string/call"
            android:src="@drawable/ic_phone_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/client_label" />

        <TextView
            android:id="@+id/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/phone"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/call_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/call_btn" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/call_btn"
            app:layout_constraintStart_toStartOf="@id/text"
            app:layout_constraintTop_toTopOf="@+id/call_btn"
            tools:text="(469) 226-6061" />

        <ImageButton
            android:id="@+id/email_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="?android:colorBackground"
            android:tint="@color/colorPrimary"
            android:contentDescription="@string/email"
            android:src="@drawable/ic_email_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/call_btn" />

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/email"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/email_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/email_btn"
            tools:layout_editor_absoluteX="8dp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/email_btn"
            app:layout_constraintStart_toStartOf="@+id/phone"
            app:layout_constraintTop_toTopOf="@+id/email_btn"
            tools:text="dan@axelby.com" />

        <Button
            android:id="@+id/date_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/textColorOnPrimary"
            android:backgroundTint="?android:colorPrimary"
            android:text="@string/change"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_btn" />

        <TextView
            android:id="@+id/date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/when"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/date_btn"
            app:layout_constraintTop_toTopOf="@+id/date_btn"
            tools:layout_editor_absoluteX="8dp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/date_btn"
            app:layout_constraintStart_toStartOf="@+id/phone"
            app:layout_constraintTop_toTopOf="@+id/date_btn"
            tools:text="dan@axelby.com" />

        <TextView
            android:id="@+id/text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/reminder"
            android:labelFor="@+id/text"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/text"
            tools:layout_editor_absoluteX="8dp" />

        <EditText
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="top"
            app:layout_constraintStart_toEndOf="@+id/text_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_btn"
            app:layout_constraintBottom_toTopOf="@+id/save_btn"
            tools:text="call about meeting"
            android:inputType="text" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="?attr/colorAccent" />

    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>
