<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.axelby.elementarycrm.ClientDetailFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/call_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="?android:colorBackground"
            android:tint="@color/colorPrimary"
            android:contentDescription="@string/call"
            android:src="@drawable/ic_phone_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/phone"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/call_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/call_btn" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/call_btn"
            app:layout_constraintStart_toEndOf="@+id/phone_label"
            app:layout_constraintTop_toTopOf="@+id/call_btn"
            tools:text="(469) 226-6061" />

        <ImageButton
            android:id="@+id/email_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="?android:colorBackground"
            android:tint="@color/colorPrimary"
            android:contentDescription="@string/email"
            android:src="@drawable/ic_email_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/call_btn" />

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/email"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/email_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/email_btn"
            tools:layout_editor_absoluteX="8dp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/email_btn"
            app:layout_constraintStart_toStartOf="@+id/phone"
            app:layout_constraintTop_toTopOf="@+id/email_btn"
            tools:text="dan@axelby.com" />

        <android.support.v4.widget.Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_btn" />

        <TextView
            android:id="@+id/reminder_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/reminders"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/reminders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reminder_label"
            tools:listitem="@layout/item_note" />

        <TextView
            android:id="@+id/notes_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/notes"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reminders" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notes_label" />
    </android.support.constraint.ConstraintLayout>


    <LinearLayout
        android:id="@+id/reminderFabLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom|end"
        android:padding="24dp"
        android:gravity="center_vertical"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:alpha="0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder"
            android:padding="8dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/reminderFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:padding="8dp"
            android:backgroundTint="@color/colorAccent"
            android:tint="?android:textColorSecondary"
            android:src="@drawable/ic_timer_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/noteFabLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom|end"
        android:padding="24dp"
        android:gravity="center_vertical"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:alpha="0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:padding="8dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/noteFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:padding="8dp"
            android:backgroundTint="@color/colorAccent"
            android:tint="?android:textColorSecondary"
            android:src="@drawable/ic_note_black_24dp" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="24dp"
        android:tint="?android:textColorSecondary"
        android:src="@drawable/ic_add_black_24dp" />

</FrameLayout>
